# django-ffield

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
django_ffield/: fields.py  requirements.txt  utils.py  validators.py
